--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
-[[plugins]]
-   package = "@netlify/plugin-nextjs"
+
 
 [build]
-   command = "npm run build"
-   publish = ".next"
+  command   = "npm run build"
+  functions = "out_functions"
+  publish   = "out_publish"
 
 [functions]
   included_files = ["public/locales/*"]
